--- a/src/partials/_baseStyles.scss
+++ b/src/partials/_baseStyles.scss
@@ -26,7 +26,7 @@ a {
   color: $primary-color;
   &:hover,
   &:focus {
-    color: $black;
+    color: $secondary-color;
     transition: ease-in-out 0.3s;
   }
 }
@@ -51,5 +51,5 @@ button {
 footer {
   font-size: 1rem;
   text-align: center;
-  margin: 2rem auto;
+  margin: 8rem auto 2rem auto;
 }
