--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -1,7 +1,8 @@
 // color
 $black: #333;
 $white: #fff;
-$primary-color: rgba(2, 85, 45, 0.685);
+$primary-color: rgb(4, 0, 255);
+$secondary-color: rgb(44, 208, 74);
 
 // font
 $font-family: 'Open Sans', sans-serif;
