updated component name to Cashflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,4 +3,4 @@
 @use "./partials/baseStyles";
 @use "./partials/nav";
 @use "./partials/header";
-@use "./partials/inputForm";
+@use "./partials/cashflow";
